<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B6E1C2"
    tools:context=".MainActivity" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:backgroundTint="#759D9D"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btnLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SU_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:text="Sign Up"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/SU_fullname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="10dp"
                android:text="@string/inputName"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

            </TextView>

            <LinearLayout
                android:id="@+id/SU_txtfullname"
                android:layout_width="359dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:background="#fff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/contact_icon"
                    tools:ignore="ContentDescription">

                </ImageView>

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/inputName"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/SU_mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textView3">

            </TextView>

            <LinearLayout
                android:id="@+id/SU_txtmail"
                android:layout_width="359dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:background="#fff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_baseline_alternate_email_24"
                    tools:ignore="ContentDescription">

                </ImageView>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <TextView
                android:id="@+id/SU_pass_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="21dp"
                android:text="@string/m_t_kh_u"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/txtid" />

            <LinearLayout
                android:id="@+id/SU_txtpass"
                android:layout_width="359dp"
                android:layout_height="48dp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="30dp"
                android:background="#fff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/key_icon"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/nh_p_m_t_kh_u"
                    android:inputType="textPassword"
                    android:password="true"
                    tools:ignore="Deprecated" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SU_txtpass" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="245dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:shadowRadius="20"
                android:text="@string/signUp_string"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/SU_txtpass"
                tools:ignore="HardcodedText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/already_have_account"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="NotSibling" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/SU_progessbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>