<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    layout="@layout/toolbar"/>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xin_ch_o_user"
                        android:id="@+id/helloText"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/search"
                        app:cardCornerRadius="25dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="20dp"
                                app:drawableStartCompat="@drawable/search_icon" />

                            <EditText
                                android:id="@+id/search_bar"
                                android:layout_width="260dp"
                                android:layout_height="match_parent"
                                android:background="#00FFFFFF"
                                android:hint="@string/search"
                                android:importantForAutofill="no"
                                android:inputType="text" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:drawableEndCompat="@drawable/voice_icon" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/image_slider"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        app:iss_auto_cycle="true"
                        android:layout_marginTop="20dp"
                        app:iss_corner_radius="50"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        app:iss_period="1000"
                        app:iss_delay="2000"
                        app:iss_text_align="CENTER"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flashsale"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/red"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pop_sale"
                    android:layout_margin="5dp">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rcm_today"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pop_rcm_today"
                    android:layout_margin="5dp">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">
        <include
            layout="@layout/nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>