<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6E1C2"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log"
        android:contentDescription="@string/logo"
        tools:ignore="ContentDescription,HardcodedText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:backgroundTint="#759D9D"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:id="@+id/btnLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="Sign In"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

<!--            <TextView-->
<!--                android:id="@+id/textviewusrname"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="29dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:text="@string/username_ho_c_email"-->
<!--                android:textSize="16sp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->

<!--                app:layout_constraintTop_toBottomOf="@+id/textView3">-->

<!--            </TextView>-->

            <LinearLayout
                android:id="@+id/SI_email_field"
                android:layout_width="359dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:background="#fff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/person_icon"
                    tools:ignore="ContentDescription">

                </ImageView>

                <EditText
                    android:id="@+id/SI_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/nh_p_username_ho_c_email"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />

            </LinearLayout>

<!--                <TextView-->
<!--                    android:id="@+id/textviewpass"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="29dp"-->
<!--                    android:layout_marginTop="21dp"-->
<!--                    android:text="@string/m_t_kh_u"-->
<!--                    android:textSize="16sp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->

<!--                    app:layout_constraintTop_toBottomOf="@+id/txtid" />-->

                <LinearLayout
                    android:id="@+id/SI_password_field"
                    android:layout_width="359dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="#fff"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/key_icon"
                        tools:ignore="ContentDescription"/>

                    <EditText
                        android:id="@+id/SI_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/nh_p_m_t_kh_u"
                        android:inputType="textPersonName"
                        android:password="true"
                        tools:ignore="Deprecated" />
                </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="245dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Đăng Nhập"
                android:textSize="20sp"
                android:shadowRadius="20"
                app:layout_constraintTop_toBottomOf="@+id/txtpass"
                tools:ignore="HardcodedText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/textviewSignUp"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/ch_a_c_t_i_kho_n_ng_k_ngay"
                    tools:ignore="NotSibling" />
            </RelativeLayout>
            <ProgressBar
                android:id="@+id/LG_progessbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>